# cppstudy

./: .gitignore  .travis.yml
helloworld/: CMakeLists.txt
helloworld/config/: config.h.in
helloworld/lib/: CMakeLists.txt  lib.cpp  lib.h
helloworld/src/: CMakeLists.txt  helloworld.cpp
helloworld/test/: CMakeLists.txt  test_version.cpp
